pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference14.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<this, Any>): String = throw("not supported")
}
local d: D = new {}

test = ref.Reference(d, Listing, "").default
